Added distribution lock, updated logic of storaging blobs
